--- a/src/main/webapp/styles/baoxianDetail/cheXianDetail.css
+++ b/src/main/webapp/styles/baoxianDetail/cheXianDetail.css
@@ -36,8 +36,7 @@ body{
 	width: 100%;
 	background: #fff;
 	margin-top: 0.32rem;
-	/*margin-bottom: 0.13rem;*/
-	bottom: 1.23rem;
+	margin-bottom: 0.13rem;
 }
 .infor .infor_til{
 	width: 94%;
@@ -78,6 +77,9 @@ body{
 }
 
 /*----------------------------------------------------------------------------------险种信息*/
+.coverage_infor{
+	margin-bottom: 1.23rem;
+}
 .coverage_infor ul li{
 	width: 100%;
 	overflow: hidden;
