--- a/src/main/webapp/styles/cheXianList/cheXianList.css
+++ b/src/main/webapp/styles/cheXianList/cheXianList.css
@@ -22,7 +22,8 @@ body{
 .ss{
 	width: 100%;
 	height: 0.8rem;
-	margin: 0.24rem 0;
+	/*margin: 0.24rem 0;*/
+	margin: 0rem auto;
 }
 .ss_val{
 	float: left;
