--- a/src/main/webapp/styles/cheXianList/cheXianList.css
+++ b/src/main/webapp/styles/cheXianList/cheXianList.css
@@ -22,8 +22,7 @@ body{
 .ss{
 	width: 100%;
 	height: 0.8rem;
-	/*margin: 0.24rem 0;*/
-	margin: 0rem auto;
+	margin: 0.24rem 0;
 }
 .ss_val{
 	float: left;
