--- a/src/main/webapp/styles/pullToRefresh.css
+++ b/src/main/webapp/styles/pullToRefresh.css
@@ -35,7 +35,7 @@
 	font-size: 2.25rem;
 	color: #888;
 	font-family: Arial, Microsoft YaHei;
-	background-color: #fff;
+	background-color: #333;
 }
 .pullDown .pullDownIcon, .pullUp .pullUpIcon {
 	background: url("/files/arrow.png") no-repeat;
