--- a/src/main/webapp/styles/pullToRefreshchexian.css
+++ b/src/main/webapp/styles/pullToRefreshchexian.css
@@ -30,12 +30,12 @@
 }
 .pullDown, .pullUp {
 	text-align: center;
-	height: 0.8rem;
+	/*height: 0.8rem;*/
 	line-height: 0.8rem;
 	font-size: 0.36rem;
 	color: #888;
 	font-family: Arial, Microsoft YaHei;
-	background-color: #fff;
+	background-color: #333;
 }
 .pullDown .pullDownIcon, .pullUp .pullUpIcon {
 	background: url("/files/arrow.png") no-repeat;
