--- a/src/main/webapp/styles/cheXianList/cheXianList.css
+++ b/src/main/webapp/styles/cheXianList/cheXianList.css
@@ -46,6 +46,13 @@ body{
 	margin-right: 0.24rem;
 	cursor: pointer;
 }
+.tishidiv{
+	position: fixed;
+	width: 100%;
+	height: 2.2rem;
+	z-index: 999;
+	background: #f4f4f4;;
+}
 .tabledelse  select{
 	border-radius: 0.1rem;
 	-webkit-border-radius: 0.1rem;
