--- a/src/main/webapp/styles/shoppersonCenter/grzx.css
+++ b/src/main/webapp/styles/shoppersonCenter/grzx.css
@@ -8,6 +8,17 @@ body{
 .ct-margin{
 	margin-top: 0.2rem;
 }
+
+/*--------------------------------------------------------------------------------车辆品牌的遮罩层*/
+.car_brand{
+	width: 100%;
+	height: 100%;
+	background: rgba(0,0,0,0.5);
+	position: fixed;
+	top: 0;
+	left: 0;
+	display: none;
+}
 /*导航栏部分*/
 .nav{
 	height: 3.5rem;
