--- a/src/main/webapp/styles/shoppersonCenter/grzx.css
+++ b/src/main/webapp/styles/shoppersonCenter/grzx.css
@@ -89,9 +89,11 @@ body{
 	text-overflow: ellipsis;
 }
 .nr-bj{
-	width: 0.37rem;
+	/*width: 0.37rem;*/
+	width: 0.4rem;
 	float: left;
-	padding: 0.32rem 0.3rem;
+	/*padding: 0.32rem 0.3rem;*/
+	padding: 0.38rem 0.3rem;
 }
 .nb-num{
 	width: 2rem;
