--- a/src/main/webapp/styles/shoppersonCenter/projectCZHICard.css
+++ b/src/main/webapp/styles/shoppersonCenter/projectCZHICard.css
@@ -27,25 +27,40 @@ body{
 .swiper-container-horizontal>.swiper-pagination-bullets, .swiper-pagination-custom, .swiper-pagination-fraction{
 	bottom: 5px;
 }
+c-zong{
+	overflow: hidden;
+	white-space: nowrap;
+	text-overflow: ellipsis;
+}
 .c-title{
 	font-size: 0.6rem;
 	color: #fff;
 	padding-left: 0.3rem;
 	padding-right: 0.15rem;
-	margin-top: 1.1rem;
-	overflow: hidden;
-	white-space: nowrap;
-    text-overflow: ellipsis;
+	margin-top: 0.5rem;
+
 }
-.c-num{
-	font-size: 0.48rem;
+.c-money{
+	font-size: 0.45rem;
 	color: #fff;
 	padding-left: 0.3rem;
-	margin-top: 0.68rem;
+	margin-top: 0.18rem;
 	padding-right: 0.15rem;
-	overflow: hidden;
-	white-space: nowrap;
-    text-overflow: ellipsis;
+}
+.c-num{
+	font-size: 0.45rem;
+	color: #fff;
+	padding-left: 0.3rem;
+	margin-top: 0.5rem;
+	padding-right: 0.15rem;
+}
+.c-time{
+	font-size: 0.45rem;
+	color: #fff;
+	padding-left: 0.3rem;
+	margin-top: 0.18rem;
+	padding-right: 0.15rem;
+	text-align: right;
 }
 /*主要内容*/
 .c-content{
