--- a/src/main/webapp/styles/ahi/ahi.css
+++ b/src/main/webapp/styles/ahi/ahi.css
@@ -366,6 +366,7 @@ a:active {color: #000;
     right: 20px;
 }
 .xq_img{width:230px;height:230px;margin-right:10px;}
+.xq_vieo{width:400px;height:200px;margin-right:10px;}
 .zsimg{
     width:100%;
     height:100%;
